Fix newsletter spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -317,6 +317,8 @@ img#addmarginbottom {
 
 .row{
 	padding-top: 40px;
+    margin-right: 0px;
+    margin-left: 0px;
 }
 
 form{
@@ -325,15 +327,16 @@ form{
 
 form img{
 	width: 100%;
+	padding-top:50px; 
 }
 .form-group{
-	padding-right: 10px;
-	padding-left: 0px;
+	padding-right: 0px;
+	padding-left: 0px; 
 }
 .subscribe{
-	display: inline-block;
+	/*display: inline-block;
 	float: none;
-	margin: 0;
+	margin: 0;*/
 	font-size: 20px;
 }
 
@@ -388,6 +391,13 @@ form img{
 
 	#buffer {
 		height: 50px;
+	}
+
+	table{
+		margin-left: 0px;
+	}
+	.thisismytable{
+		padding: 0;
 	}
 	/****************PORTFOLIO****************/
 	/****************TESTIMONIALS****************/
